review comment fixes

--- a/client/src/components/SiteSearch/SiteSearchListing/SiteSearchPaginator/SiteSearchPaginator.module.css
+++ b/client/src/components/SiteSearch/SiteSearchListing/SiteSearchPaginator/SiteSearchPaginator.module.css
@@ -1,3 +1,11 @@
 .paginator-link {
   color: #9d85ef;
 }
+
+.active {
+  background-color: #9d85ef;
+}
+
+.active .paginator-link {
+  color: white;
+}
