FP-597: Reduce horizontal padding on appDetail box
The padding is not desirable (and was usually invisible before¹²).
¹ The use of `<Sectionmessage>` makes the padding visible
² Before, the padding was invisible on most screens, cuz messge is short

--- a/client/src/components/Applications/AppForm/AppForm.scss
+++ b/client/src/components/Applications/AppForm/AppForm.scss
@@ -78,5 +78,5 @@
     justify-content: center;
     height: 100%; /* Be consistent with `#appDetail-wrapper`/`.app-placeholder` (which can exist at the same location),
                      so that `appBrowser-wrapper` height does not change based on sibling content */
-    padding: 30px;
+    padding: 30px 0;
 }
