FP-531: Move bootstrap.css into icon.css

--- a/client/src/styles/trumps/icon.css
+++ b/client/src/styles/trumps/icon.css
@@ -14,3 +14,14 @@
 /* .icon-contract */.icon-collapse::before {
   content: "\e915";
 }
+
+
+
+/* Overrides */
+
+/* Align wrapped button text in buttons that have icons */
+/* HACK: Placeholder style until UI is finalized and componetized */
+.btn .icon + span,
+.btn .loading-icon + span {
+  vertical-align: middle;
+}
