task/FP-213: Shared Workspaces (Projects) Frontend (#275)
* Sidebar link to shared route

* task/FP-790 Shared workspaces listing (#268)

* Quick: Reduce <Message> `warn`'s to `info`'s (#267)

* Quick: Reduce <Message> `warn`'s to `info`'s

* Quick: Fix Message tests (since logging change)

* Quick: Docuemnt how to silence test logging

* quick fix on agave operation calls

* Projects sagas

* Project list rendering

* Shared Workspaces link in sidebar

* Router link for project listing

* Project file listing

* Projects scheme with breadcrumbs

* Unit tests

* css

* scss lint

* Move clear project selection dispatch to datafilesprojectlisting

* Rename DataFilesProjectListing to DataFilesProjectFileListing

* Remove unnecessary param

* Shared workspaces saga triggers clearing of breadcrumbs and get projects listing

Co-authored-by: W. Bomar <62723358+tacc-wbomar@users.noreply.github.com>

* Fix bad merge

* task/FP-791 shared workspace file listing, manage team members (#274)

* Add projects modal

* User search saga

* User search component (wip)

* User search temporary component

* Project member list and search

* Add example non-working code

* Set initial member list using useEffect (THANK YOU JAKE)

* Proptypes and unit tests

* Perform project creation with adding specified members

* Unit tests

* Refactor project member list from state hook to redux reducer state

* Prevent adding of pre-existing members

* eslint

* fix unit tests

* scsslint

* Project metadata reducer

* Metadata components

* Move searchbar to DataFilesListing component

* Refactor box and container sizing for child components of DataFiles

* fix unit tests

* Fix sizing of projects viewer

* Manage team modal stub

* Transfer user workflow buttons

* Column switching during transfer confirmation

* Visual styles

* Sagas and views to support transfering ownership

* Manage membership 

--- a/client/src/components/DataFiles/DataFilesModals/DataFilesModals.scss
+++ b/client/src/components/DataFiles/DataFilesModals/DataFilesModals.scss
@@ -22,6 +22,7 @@
     .filesListing {
       flex-grow: 1;
       outline: 1px solid #707070;
+      overflow-y: auto;
     }
     .tr-header {
         border-bottom-color: #C6C6C6;
@@ -40,6 +41,27 @@
     /* Overrides bootstrap modal tittle */
     .modal-title {
       font-size: 18px;
+    }
+
+    .flex-column {
+      height: 100%;
+    }
+
+    /* Matches layout of other data files listings */
+    .InfiniteScrollTable.projects-listing {
+      th {
+        color: #484848;
+      }
+      th,
+      td {
+        display: flex;
+        align-items: center;
+        font-size: 12px;
+        padding: 5px 15px;
+      }
+      td {
+        height: 45px;
+      }
     }
 }
 
