--- a/server/portal/templates/includes/navigation.html
+++ b/server/portal/templates/includes/navigation.html
@@ -46,10 +46,17 @@
 
   <!-- Navbar Links -->
   <div class="collapse navbar-collapse" id="navbarsExpandTarget">
-    {# FAQ: Only the version of this template _from the CMS repo_ can not use `only`; here can #}
-    {% include "includes/nav_cms.html" with className="navbar-nav" only %}
 
-    {% include "includes/nav_portal.html" with className="navbar-nav navbar-right  ml-auto" user=user only %}
+
+
+      {# FAQ: Only the version of this template _from the CMS repo_ can not use `only`; here can #}
+      {% include "includes/nav_cms.html" with className="navbar-nav" only %}
+
+
+      {% include "includes/nav_search.html" with className="form-inline  ml-auto" only %}
+      {% include "includes/nav_portal.html" with className="navbar-nav" user=user only %}
+
+
+
   </div>
 </nav>
-
