--- a/server/portal/templates/includes/nav_search.html
+++ b/server/portal/templates/includes/nav_search.html
@@ -3,10 +3,10 @@
 {# RFE: Use a custom element or React component whose code exists in one repo #}
 {# WARNING: Some markup is duplicated in other repositories #}
 {# SEE: https://confluence.tacc.utexas.edu/x/LoCnCQ #}
-<div class="s-search-bar  {{className}}" id="s-search-bar">
+<tacc-search-bar class="s-search-bar  {{className}}" id="s-search-bar">
   <!-- The search bar is created here. -->
   {# FAQ: Content populated via JavaScript, below #}
-</div>
+</tacc-search-bar>
 <script type="module">
   import * as importHTML from '/static/site_cms/js/modules/importHTML.js';
   import * as registerCustomElement from '/static/site_cms/js/modules/registerCustomElement.js';
