FP-531: Update nav_cms & nav_search for API change

--- a/server/portal/templates/includes/nav_cms.html
+++ b/server/portal/templates/includes/nav_cms.html
@@ -15,7 +15,7 @@
 
   const container = document.getElementById('s-cms-nav');
 
-  importHTML.fromURL(container, '/cms/nav/pages/markup/', () => {
+  importHTML.insertFromURL('/cms/nav/pages/markup/', container).then(container => {
     flagLinkActive({
       activeClassname: 'active',
       linkSelector: 'a',
