FP-531: Responsive Design

--- a/server/portal/templates/includes/navigation.html
+++ b/server/portal/templates/includes/navigation.html
@@ -29,7 +29,7 @@
 
 
 <!-- Navigation Bar -->
-<nav id="s-header" class="s-header  navbar navbar-expand-lg navbar-dark">
+<nav id="s-header" class="s-header  navbar navbar-expand-xl navbar-dark">
   <!-- Portal Logo -->
 
 
