Confirmation message styles

--- a/client/src/components/DataFiles/DataFilesModals/DataFilesLinkModal.module.scss
+++ b/client/src/components/DataFiles/DataFilesModals/DataFilesLinkModal.module.scss
@@ -7,11 +7,13 @@
 }
 
 .help-text {
-  color: #AFAFAF;
+  color: #888F96;
   font-style: italic;
   font-size: 12px;
 }
 
 .warning {
   margin-right: 1em;
+  color: #888F96;
+  font-size: 12px;
 }
