Animations for ui feedback (WIP)

--- a/client/src/components/_common/TextCopyField/TextCopyField.module.scss
+++ b/client/src/components/_common/TextCopyField/TextCopyField.module.scss
@@ -1,5 +1,14 @@
 .root {
   display: flex;
+  .copy-button {
+    transition: background-color 5s;
+  }
+}
+
+.root.copied {
+  .copy-button {
+    background-color: green;
+  }
 }
 
 .input {
