--- a/client/src/components/DataFiles/DataFilesListing/DataFilesListing.module.scss
+++ b/client/src/components/DataFiles/DataFilesListing/DataFilesListing.module.scss
@@ -1,13 +1,14 @@
-.root {
-  display: flex;
-  flex-direction: column;
-  flex-grow: 1;
-}
-
+// NOTE: Added in PR #275 for FP-213
+// TODO: Ensure this works or is removed in PR #236 for FP-385
 .searchbar {
   padding-bottom: 15px;
 }
 
-.file-container {
+.content {
+  /* As a flex child */
   flex-grow: 1;
+
+  /* NOTE: Mimicked on: History, Allocations, DataFilesListing, DataFilesProjectFileListing */
+  padding-top: 1.75rem; /* ~28px (22.5px * design * 1.2 design-to-app ratio) */
+  padding-left: 1.5em; /* ~24px (20px * design * 1.2 design-to-app ratio) */
 }
