--- a/client/src/components/DataFiles/DataFilesProjectFileListing/DataFilesProjectFileListing.module.scss
+++ b/client/src/components/DataFiles/DataFilesProjectFileListing/DataFilesProjectFileListing.module.scss
@@ -1,17 +1,15 @@
-.root {
-  flex-grow: 1;
-  display: flex;
-  flex-direction: column;
-}
+// NOTE: Added in PR #275 for FP-213
+// TODO: Ensure this works or is removed in PR #236 for FP-385
+// .title-bar {
+//   border-bottom: 1px solid black;
+//   padding-left: 1em;
+//   margin-bottom: 0.5em;
+//   display: flex;
+//   justify-content: space-between;
+// }
 
-.title-bar {
-  border-bottom: 1px solid black;
-  padding-left: 1em;
-  margin-bottom: 0.5em;
-  display: flex;
-  justify-content: space-between;
-}
-
+// NOTE: Added in PR #275 for FP-213
+// TODO: Migrate this to `SectionTable`
 .description {
   padding-left: 1em;
   padding-bottom: 1em;
@@ -22,6 +20,8 @@
   align-items: flex-start;
 }
 
+// NOTE: Added in PR #275 for FP-213
+// TODO: Ensure this works or is removed in PR #236 for FP-385
 .edit {
   padding-top: 0;
   padding-bottom: 0;
@@ -32,4 +32,13 @@
   font-weight: bold;
   padding-left: 0.25em;
   padding-right: 0.25em;
+}
+
+.content {
+  /* As a flex child */
+  flex-grow: 1;
+
+  /* NOTE: Mimicked on: History, Allocations, DataFilesListing, DataFilesProjectFileListing */
+  padding-top: 1.75rem; /* ~28px (22.5px * design * 1.2 design-to-app ratio) */
+  padding-left: 1.5em; /* ~24px (20px * design * 1.2 design-to-app ratio) */
 }
