--- a/client/src/components/DataFiles/DataFilesProjectsList/DataFilesProjectsList.module.scss
+++ b/client/src/components/DataFiles/DataFilesProjectsList/DataFilesProjectsList.module.scss
@@ -1,4 +1,17 @@
-.root {
+.content {
+  /* As a flex child */
   flex-grow: 1;
+
+  /* NOTE: Mimicked on: History, Allocation, DataFiles, DataFilesProjectsList, DataFilesProjectFileListing */
+  padding-top: 1.75rem; /* ~28px (22.5px * design * 1.2 design-to-app ratio) */
+  padding-left: 1.5em; /* ~24px (20px * design * 1.2 design-to-app ratio) */
+}
+
+/* NOTE: Mimicked on: DataFiles, DataFilesProjectsList, DataFilesProjectFileListing */
+.content-placeholder {
+  flex-grow: 1;
+
   display: flex;
+  align-items: center;
+  justify-content: center;
 }
