--- a/client/src/components/DataFiles/DataFiles.module.css
+++ b/client/src/components/DataFiles/DataFiles.module.css
@@ -12,3 +12,7 @@
   padding-top: 1.75rem; /* ~28px (22.5px * design * 1.2 design-to-app ratio) */
   padding-left: 1.5em; /* ~24px (20px * design * 1.2 design-to-app ratio) */
 }
+
+.searchbar {
+  padding-bottom: 15px;
+}
