--- a/client/src/components/Tickets/TicketCreateForm.scss
+++ b/client/src/components/Tickets/TicketCreateForm.scss
@@ -27,6 +27,10 @@
   text-align: right;
 }
 
+.ticket-create-spinner {
+  margin-right: 0.5em;
+}
+
 .ticket-create-button-row .alert {
   margin-bottom: 0;
   border: none;
