Revert "FP-385: POC: Allow Scroll of Description & Search"
This reverts commit fa992806cd3652e42d188c258672d3b9fdf02538.

--- a/client/src/components/DataFiles/DataFilesProjectFileListing/DataFilesProjectFileListing.module.scss
+++ b/client/src/components/DataFiles/DataFilesProjectFileListing/DataFilesProjectFileListing.module.scss
@@ -19,6 +19,8 @@
 .description {
   padding-top: 0.5em;
   padding-bottom: 1em;
+
+  border-top: var(--global-border-width--normal) solid var(--global-color-primary--dark);
 }
 
 .searchbar {
