--- a/client/src/components/Tickets/TicketCreateForm.scss
+++ b/client/src/components/Tickets/TicketCreateForm.scss
@@ -30,6 +30,10 @@
   margin-right: 0.5em;
 }
 
+.ticket-create-info-alert {
+  margin-right: 1em;
+}
+
 .ticket-create-button-row .alert {
   margin-bottom: 0;
   border: none;
