FileDropZone styling for different layouts.

--- a/client/src/components/DataFiles/DataFilesModals/DataFilesModals.scss
+++ b/client/src/components/DataFiles/DataFilesModals/DataFilesModals.scss
@@ -35,6 +35,7 @@
     /* Overrides bootstrap button */
     .btn {
       font-size: 12px;
+      font-weight: 600;
     }
 
     /* Overrides bootstrap modal tittle */
