FP-817: Finish UI requirements. Distinguish logic.
- Remove UI semantics from state logic.
- Support icon change on copy.
- Use global colors that pass WCAG AA requirements

--- a/client/src/components/_common/TextCopyField/TextCopyField.module.scss
+++ b/client/src/components/_common/TextCopyField/TextCopyField.module.scss
@@ -18,8 +18,7 @@
 .copy-button.is-copied:hover,
 .copy-button.is-copied:focus,
 .copy-button.is-copied:active {
-  background-color: green;
-  color: white;
+  background-color: var(--global-color-success--normal);
 }
 
 .button__icon {
