FP-817: Use non-accessible but better-visual color
Accessibility will solved later by changing global color variable(s).

--- a/client/src/components/_common/TextCopyField/TextCopyField.module.scss
+++ b/client/src/components/_common/TextCopyField/TextCopyField.module.scss
@@ -19,6 +19,7 @@
 .copy-button.is-copied:focus,
 .copy-button.is-copied:active {
   background-color: var(--global-color-success--normal);
+  color: var(--global-color-primary--xx-light);
 }
 
 .button__icon {
