InfiniteScrollTable explicitly checks for headerClassName column prop

--- a/client/src/components/DataFiles/DataFilesProjectMembers/DataFilesProjectMembers.scss
+++ b/client/src/components/DataFiles/DataFilesProjectMembers/DataFilesProjectMembers.scss
@@ -10,6 +10,11 @@
   font-size: 12px;
 }
 
+
+.project-members__member-header {
+  color: #484848;
+}
+
 .project-members__loading-header {
   display: flex;
   justify-content: flex-end;
