--- a/client/src/components/DataFiles/DataFilesProjectMembers/DataFilesProjectMembers.module.scss
+++ b/client/src/components/DataFiles/DataFilesProjectMembers/DataFilesProjectMembers.module.scss
@@ -24,6 +24,10 @@
   font-weight: bold;
 }
 
+.member-search-group {
+  width: 70%;
+}
+
 .member-search {
   margin-bottom: 1em;
   font-size: 12px !important;
