--- a/client/src/components/_common/TextCopyField/TextCopyField.module.scss
+++ b/client/src/components/_common/TextCopyField/TextCopyField.module.scss
@@ -1,33 +1,25 @@
-.root {
-  display: flex;
-}
-
 .input {
   composes: form-control from '../../../styles/components/bootstrap.form.css';
 }
 
-@keyframes copied-anim {
-  0% {
-    background-color: green;
-    color: white;
-  }
-  80% {
-    background-color: green;
-    color: white;
-  }
-  100% {
-    background-color: #F4F4F4;
-    color: #484848;
-  }
-}
-
 .copy-button {
+  // May be changed by JavaScript which also needs the value
+  --transition-duration: 0;
+
+  transition:
+    color var(--transition-duration),
+    background-color var(--transition-duration);
+
   composes: c-button--secondary from '../../../styles/components/c-button.css';
 }
 
-.copy-button.copied {
-  animation-name: copied-anim;
-  animation-duration: 2s;
+.copy-button.is-copied,
+// FAQ: The pseudo-classes allow override of Bootstrap styles/selectors
+.copy-button.is-copied:hover,
+.copy-button.is-copied:focus,
+.copy-button.is-copied:active {
+  background-color: var(--global-color-success--normal);
+  color: var(--global-color-primary--xx-light);
 }
 
 .button__icon {
@@ -37,4 +29,3 @@
 .button__text {
   /* … */
 }
-
