task/FP-814 - public url fixes from testing (#291)
* Confirm button style

* Confirmation message styles

* Help text spacing

* Linting

* Replace help-text div with FormText and app-wide style

* Secondary style on confirm button

--- a/client/src/components/DataFiles/DataFilesModals/DataFilesLinkModal.module.scss
+++ b/client/src/components/DataFiles/DataFilesModals/DataFilesLinkModal.module.scss
@@ -6,12 +6,8 @@
   margin-top: 0.5em;
 }
 
-.help-text {
-  color: #AFAFAF;
-  font-style: italic;
-  font-size: 12px;
-}
-
 .warning {
   margin-right: 1em;
+  color: #888F96;
+  font-size: 12px;
 }
