--- a/client/src/components/Tickets/TicketCreateForm.scss
+++ b/client/src/components/Tickets/TicketCreateForm.scss
@@ -1,5 +1,4 @@
 .ticket-create-form {
-  height: 100%;
   display: flex;
   flex-direction: column;
   font-size: 0.75rem;
@@ -25,6 +24,14 @@
   justify-content: center;
   align-items: center;
   text-align: right;
+}
+
+.ticket-create-spinner {
+  margin-right: 0.5em;
+}
+
+.ticket-create-info-alert {
+  margin-right: 1em;
 }
 
 .ticket-create-button-row .alert {
