--- a/server/portal/templates/includes/nav_search.html
+++ b/server/portal/templates/includes/nav_search.html
@@ -4,10 +4,26 @@
 {# IDEA: Should CMS use React component or Portal's React use custom element #}
 {# WARNING: Some markup is duplicated in other repositories #}
 {# SEE: https://confluence.tacc.utexas.edu/x/LoCnCQ #}
-<tacc-search-bar class="s-search-bar  {{className}}">
+<tacc-search-bar class="s-search-bar  {{className}}" id="s-search-bar">
   <!-- The search bar is populated here (from an external template). -->
   {# FAQ: Content populated via JavaScript, below #}
 </tacc-search-bar>
+
+<!-- Populate search field value from matching URL query parameter -->
+{# FP-858: Instead use `{{request.GET.query_string}}` in CMS Django template #}
+<script>
+  function populateSearchFieldValueFromURLParams() {
+    import('/static/site_cms/js/modules/inputFieldValue.js').then((inputFieldValue) => {
+    
+      const shadowRoot = document.getElementById('s-search-bar').shadowRoot;
+      console.log({
+        searchBar: document.getElementById('s-search-bar'),
+        shadowRoot
+      });
+      inputFieldValue.update(shadowRoot, 'query_string');
+    });
+  }
+</script>
 
 <script type="module">
   import * as importHTML from '/static/site_cms/js/modules/importHTML.js';
@@ -20,5 +36,8 @@
     markup = document.getElementById('css-bootstrap').outerHTML + markup;
 
     registerCustomElement.fromHTMLString(markup, 'tacc-search-bar');
+
+    // Populate search field value
+    populateSearchFieldValueFromURLParams();
   });
 </script>
