FP-531: Update header search field on URL change
- Fire event on search page search to trigger header search update.
- Fix edge case bug retrieving `query_string` from URL.
- Remove extra `console.log` and new line.

--- a/server/portal/templates/includes/nav_search.html
+++ b/server/portal/templates/includes/nav_search.html
@@ -14,13 +14,10 @@
 <script>
   function populateSearchFieldValueFromURLParams() {
     import('/static/site_cms/js/modules/inputFieldValue.js').then((inputFieldValue) => {
-    
       const shadowRoot = document.getElementById('s-search-bar').shadowRoot;
-      console.log({
-        searchBar: document.getElementById('s-search-bar'),
-        shadowRoot
-      });
+
       inputFieldValue.update(shadowRoot, 'query_string');
+      inputFieldValue.updateOnEvent(shadowRoot, 'query_string', 'portal.search');
     });
   }
 </script>
