Task/fp 531 search bar in header (#290)
* site search component

* fix backend tests

* review comment fixes

* FP-531: Move bootstrap.btn.css into c-button.css

* FP-531: Move bootstrap.css into icon.css

* FP-531: Use modules to Load CMS Nav

Requires cms-site-template @ cfc1cb3

* FP-531: Use modules to Load styled Search Bar

Requires cms-site-template @ cfc1cb3.
Also, cleanup `navigation.html` new lines and indentation.

* FP-531: Update CMS image build (gets FP-531 CMS)

* FP-531: New CMS image build / Get working search

* FP-531: Load Search. Backlog CMS Search Bar Import

* FP-531: Consistency with CMS & User Guide

* FP-531: Replace Manual Search with Import from CMS

* FP-531: Simpler vars. Assume 1st template, not ID

* FP-531: Convert Cust. El. Wrapper to Cust. El.

* FP-531: Update nav_cms & nav_search for API change

* FP-531: New Bootstrap & Frontera Header CSS Load

Requires cms-site-template @ fd90139a

* FP-531: CMS & Docs Images (1st Update)

* FP-531: Responsive Design

* FP-531: CMS & Docs Images (2nd Update)

* FP-531: CMS & Docs Images (3rd Update)

* FP-531: New CMS Image (logging removed)

* FP-531: Restore :hover styles to workbench buttons

* FP-531: Restore styles to modal secondary buttons

* FP-531: New CMS docker tag to get query_string fix

* FP-531: New CMS docker tag to get icon font fix

* FP-531: HACK: Get search field value from URL

Better solution wanted (see FP-858)

* FP-531: New Docs docker tag: search value feature

* FP-531: New: Get search page field value from URL

* FP-531: Update header search field on URL change

- Fire event on search page search to trigger header search update.
- Fix edge case bug retrieving `query_string` from URL.
- Remove extra `console.log` and new line.

* FP-531: New CMS docker tag to get updateOnEvent()

This new function is used in previous commit 578f0d4.

Co-authored-by: Jarosenb <jrosenberg@tacc.utexas.edu>
Co-au

--- a/server/portal/templates/includes/nav_cms.html
+++ b/server/portal/templates/includes/nav_cms.html
@@ -3,10 +3,24 @@
 {# RFE: Use a custom element or React component whose code exists in one repo #}
 {# WARNING: Some markup is duplicated in other repositories #}
 {# SEE: https://confluence.tacc.utexas.edu/x/LoCnCQ #}
-<ul class="s-cms-nav  {{ className }}" id="cms-nav-pages" data-cms-nav-endpoint="/cms/nav/pages/markup/">
+<ul class="s-cms-nav  {{ className }}" id="s-cms-nav">
 
   <!-- All top-level CMS controlled nav elements handled here. -->
   {# FAQ: Content populated via JavaScript, below #}
 
 </ul>
-<script src="/static/site_cms/js/nav_cms.js"></script>
+<script type="module">
+  import flagLinkActive from '/static/site_cms/js/modules/flagLinkActive.js';
+  import * as importHTML from '/static/site_cms/js/modules/importHTML.js';
+
+  const container = document.getElementById('s-cms-nav');
+
+  importHTML.insertFromURL('/cms/nav/pages/markup/', container).then(container => {
+    flagLinkActive({
+      activeClassname: 'active',
+      linkSelector: 'a',
+      scopeElement: container,
+      ancestorActiveElementSelector: 'li'
+    });
+  });
+</script>
