--- a/server/portal/templates/includes/navigation.html
+++ b/server/portal/templates/includes/navigation.html
@@ -1,4 +1,4 @@
-{# NOTE: Removed references to unused settings #}
+{# NOTE: Template paths are static (compared to CMS) #}
 {# WARNING: Some markup is duplicated in other repositories #}
 {# SEE: https://confluence.tacc.utexas.edu/x/LoCnCQ #}
 {# FAQ: Extra lines exist to ease CMS/Portal/Guide template comparison #}
@@ -29,7 +29,7 @@
 
 
 <!-- Navigation Bar -->
-<nav id="s-header" class="s-header  navbar navbar-expand-lg navbar-dark">
+<nav id="s-header" class="s-header  navbar navbar-expand-xl navbar-dark">
   <!-- Portal Logo -->
 
 
@@ -46,10 +46,17 @@
 
   <!-- Navbar Links -->
   <div class="collapse navbar-collapse" id="navbarsExpandTarget">
-    {# FAQ: Only the version of this template _from the CMS repo_ can not use `only`; here can #}
-    {% include "includes/nav_cms.html" with className="navbar-nav" only %}
+    {# GL-6: Remove need for different `className` values #}
 
-    {% include "includes/nav_portal.html" with className="navbar-nav navbar-right  ml-auto" user=user only %}
+
+      {# FAQ: Here can limit context via use `only`, but CMS can not #}
+      {% include "includes/nav_cms.html" with className="navbar-nav" only %}
+
+
+      {% include "includes/nav_search.html" with className="form-inline  ml-auto" only %}
+      {# FAQ: Here must pass `user`, but CMS and User Guide do not #}
+      {% include "includes/nav_portal.html" with className="navbar-nav" user=user only %}
+
+
   </div>
 </nav>
-
