--- a/client/src/components/_common/InfiniteScrollTable/InfiniteScrollTable.scss
+++ b/client/src/components/_common/InfiniteScrollTable/InfiniteScrollTable.scss
@@ -12,7 +12,7 @@
 
   thead {
     user-select: none;
-    color: #707070;
+    color: var(--global-color-primary--x-dark);
     border-bottom: 1px solid #707070;
 
     .-sort-asc,
